更新郵件發送方法，以及主要架構支撐方法。